# helios

./: .clang-format  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  index.html  opensearch.xml  sitemap.xml
benchmarks/: CMakeLists.txt
benchmarks/helios/engine/ecs/: EntityComponent.benchmark.cpp
benchmarks/helios/engine/game/: GameObject.benchmark.cpp
benchmarks/helios/math/: camera.benchmark.cpp
benchmarks/helios/math/core/: mat4.benchmark.cpp  vec3.benchmark.cpp
benchmarks/helios/math/types/: mat4.benchmark.cpp  vec3.benchmark.cpp
benchmarks/helios/util/: Guid.benchmark.cpp
examples/: CMakeLists.txt  README.md  _module.ixx
examples/archive/milestones/collision_detection/: CollisionId.ixx  _module.ixx
examples/archive/milestones/scoring_demo/: EnemyPrefabs.ixx  IdConfig.ixx  UiActionCommandPolicy.ixx  main.cpp
examples/archive/milestones/simple_cube_rendering/: main.cpp
examples/archive/milestones/spaceship_control/: SpaceshipWidget.ixx  main.cpp
examples/archive/milestones/spaceship_shooting/: SpaceshipWidget.ixx  main.cpp
examples/collision_detection/: README.md  main.cpp
examples/collision_detection/resources/: cube.frag
examples/enemy_spawn/: README.md  main.cpp
examples/game_controller_input/: README.md  main.cpp
examples/game_controller_input/resources/: simple_vertex_shader.vert
examples/render_text_demo/: README.md  main.cpp
examples/render_text_demo/resources/: font_shader.vert
examples/runtime_test/: README.md  main.cpp
examples/runtime_test/resources/: cube.vert
examples/scoring_demo/: ArenaConfig.ixx  CollisionId.ixx  EnemyPrefabs.ixx  GameStateListener.ixx  GameTimerConfiguration.ixx  IdConfig.ixx  MatchStateListener.ixx  MenuConfiguration.ixx  Namespaces.h  README.md  SpawnConfiguration.ixx  UiActionCommandPolicies.ixx  UiActionCommandPolicy.ixx  _module.ixx  main.cpp
examples/scoring_demo/imgui/: StateOverlayWidget.ixx
examples/scoring_demo/listeners/: CountdownTimerListener.ixx  DemoTimerListener.ixx  GameStateListener.ixx  MatchStateListener.ixx
examples/scoring_demo/match/: ScoringDemoRuleSystem.ixx
examples/scoring_demo/system/: ScoringDemoRuleSystem.ixx
examples/simple_cube_rendering/: README.md  main.cpp
examples/simple_cube_rendering/resources/: cube.vert
examples/spaceship_control/: InputHandler.ixx  README.md  Spaceship.ixx  SpaceshipWidget.ixx  TheGrid.ixx  main.cpp
examples/spaceship_control/commands/: PlayerMoveCommand.ixx
examples/spaceship_control/resources/: cube.frag  cube.vert
examples/spaceship_shooting/: InputHandler.ixx  README.md  Spaceship.ixx  SpaceshipWidget.ixx  TheGrid.ixx  main.cpp
examples/spaceship_shooting/commands/: PlayerMoveCommand.ixx  PlayerShootCommand.ixx
examples/v0.0.1-alpha/collision_detection/: main.cpp
examples/v0.0.1-alpha/ecs_rendering/: GameLoop.ixx  Namespaces.h  main.cpp
examples/v0.0.1-alpha/ecs_rendering/resources/: cube.frag  cube.vert
examples/v0.0.1-alpha/enemy_spawn/: main.cpp
examples/v0.0.1-alpha/game_controller_input/: README.md  main.cpp
examples/v0.0.1-alpha/render_text_demo/: README.md  main.cpp
examples/v0.0.1-alpha/runtime_test/: main.cpp
examples/v0.0.1-alpha/scoring_demo/: MenuConfiguration.ixx
examples/v0.0.1-alpha/scoring_demo/resources/: font_shader.vert
examples/v0.0.1-alpha/simple_cube_rendering/: README.md
examples/v0.0.1-alpha/simple_cube_rendering/resources/: cube.frag
examples/v0.0.1-alpha/spaceship_control/: README.md
examples/v0.0.1-alpha/spaceship_shooting/: main.cpp
src/: CMakeLists.txt  README.md
src/ext/glfw/app/: GLFWApplication.cpp  GLFWApplication.ixx  GLFWFactory.cpp  GLFWFactory.ixx  GLFWRAIIGuard.cpp  GLFWRAIIGuard.ixx
src/ext/glfw/input/: GLFWInput.cpp  GLFWInput.ixx  GLFWInputAdapter.cpp  GLFWInputAdapter.ixx  GLFWKeyLookup.ixx
src/ext/glfw/window/: GLFWWindow.cpp  GLFWWindow.ixx  GLFWWindowConfig.ixx  GLFWWindowUserPointer.ixx
src/ext/opengl/model/: OpenGLMesh.cpp  OpenGLNode.cpp  OpenGLShader.cpp
src/ext/opengl/rendering/: OpenGLDevice.cpp  OpenGLDevice.ixx  (+1 more)
src/helios/: _app.ixx  _input.ixx  _rendering.ixx  event.ixx  glfw.ixx  math.ixx  rendering.ixx  scene.ixx  util.ixx
src/helios/app/: Application.cpp  Application.ixx
src/helios/core/: Transform.cpp
src/helios/engine/: FramePacer.cpp  Tickable.ixx  core.ixx
src/helios/event/: BasicEventManager.cpp  BasicEventManager.ixx  DequeEventQueue.cpp  DequeEventQueue.ixx  Dispatcher.ixx  Event.cpp  Event.ixx  EventManager.cpp  EventManager.ixx  EventQueue.ixx  core.ixx
src/helios/game/: CommandBuffer.cpp  GameObject.cpp  GameWorld.cpp
src/helios/glfw/: application.ixx  input.ixx  window.ixx
src/helios/input/: InputAdapter.ixx  InputManager.cpp  InputManager.ixx
src/helios/math/: _module.ixx  camera.cpp  camera.ixx  core.ixx  transform.cpp  transform.ixx  types.ixx  utils.ixx
src/helios/platform/: core.ixx  glfw.ixx  input.ixx  types.ixx  window.ixx
src/helios/rendering/: RenderCommand.cpp  RenderPass.cpp  RenderPassFactory.cpp  RenderPrototype.cpp  RenderQueue.cpp  RenderTarget.cpp  Renderable.cpp  RenderingDevice.ixx  Vertex.ixx  Viewport.cpp  _asset.ixx  _model.ixx  _module.ixx  _opengl.ixx  core.ixx  model.ixx  opengl.ixx
src/helios/scene/: Camera.cpp  CameraSceneNode.cpp  CullNoneStrategy.cpp  Node.ixx  Scene.cpp  SceneNode.cpp  Snapshot.cpp  SnapshotItem.cpp  Transform.cpp  _module.ixx
src/helios/tooling/: FpsMetrics.cpp
src/helios/util/: Guid.cpp  Guid.ixx  IOUtil.ixx  Log.ixx  _log.ixx  _module.ixx  glfw.ixx
src/helios/window/: Window.cpp  Window.ixx  WindowConfig.ixx  _module.ixx
src/impl/: README.md
tests/: CMakeLists.txt
tests/helios/core/: units.test.cpp
tests/helios/event/: BasicEventManager.test.cpp  Dispatcher.test.cpp  EventManager.test.cpp
tests/helios/input/: GamepadState.test.cpp
tests/helios/math/: camera.test.cpp  transform.test.cpp
tests/helios/rendering/: LegacyRenderPass.test.cpp  RenderPass.test.cpp  RenderTarget.test.cpp  Vertex.test.cpp
tests/helios/scene/: Node.test.cpp
tests/helios/util/: guid.test.cpp  util.guid.test.cpp
(+39908 files in other folders)
